Fix for navbar background color in dark mode

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -246,7 +246,7 @@ ul.task-list input[type="checkbox"] {
 .navbar {
   box-shadow: none;
   border-bottom: 1px solid var(--global-divider-color);
-  background-color: #e8e4e4;
+  background-color: var(global-bg-color-navbar);
   opacity: 0.95;
 }
 
