--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -5,6 +5,7 @@
 @use "sass:color";
 
 :root {
+  --global-bg-color-navbar: #e8e4e4;
   --global-bg-color: #{$white-color};
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
@@ -75,6 +76,7 @@
 }
 
 html[data-theme="dark"] {
+  --global-bg-color-navbar: #000000;
   --global-bg-color: #{$grey-color-dark};
   --global-code-bg-color: #{$code-bg-color-dark};
   --global-text-color: #{$grey-color-light};
